tests/type_errors/sort_tuples.nos
# expect_error: does not implement Ord
# Sorting tuples should fail at compile time (tuples don't implement Ord)
main() = [(2, "b"), (1, "a"), (3, "c")].sort()
